deploy/kube/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: product-database
  labels:
    app: product-database
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: product-database
        tier: database
    spec:
      containers:
        - image: mysql:5.7
          name: product-database
          ports:
            - containerPort: 3306
              name: db
