deploy/kube/example-product-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-product-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - example-product-gateway
  http:
    - match:
        - uri:
            prefix: /actuator
      route:
        - destination:
            host: example-product-service
            port:
              number: 9091
    - route:
        - destination:
            host: example-product-service
            port:
              number: 9090
